# csolve

./: .travis.yml  CMakeLists.txt  Interface.hpp  PruningTable.cpp  PruningTable.hpp  Puzzle.cpp  Puzzle.hpp  PuzzleImpl.hpp  README.md  Solve.hpp  main.cpp  test.cpp
2x2server/: server.go  server_test.go
include/: Interface.hpp  Puzzle.hpp
lib/: CMakeLists.txt
lib/cereal/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
src/: 2x2server.cpp  PriorityQueue.hpp  PruningTable.hpp  Puzzle.cpp  Puzzle.hpp  PuzzleImpl.hpp  Search.hpp  main.cpp  test.cpp
